# appa

./: .gitignore  README.md  keplerian_calculations.py  propagator.py  pyproject.toml  solarsystem.py  spacecraft.py  stop_conditions.py  test.py  toolbox.py
examples/: examples.py
spice_data/: create_mk.py  ss_kernel.mk  test.mk
src/: toolbox.py
src/appa/: __init__.py  propagator.py  solarsystem.py  spacecraft.py  stop_conditions.py  toolbox.py
src/pyOrbit/: __init__.py  propagator.py  stop_conditions.py  toolbox.py
src/spice_data/: create_mk.py
