[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build

[project]
name = "pyOrbit"
version = "0.0.1"
authors = [
  { name="C. Cooper"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy",
	"pandas",
	"scipy",
	"plotly",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues""
