[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appa"
version = "0.2.0"
authors = [
  { name="C. Cooper"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
		"Topic :: Scientific/Engineering :: Physics",
		"Topic :: Scientific/Engineering :: Visualization"

]
dependencies = [
	"numpy",
	"pandas",
	"scipy",
	"plotly",
	"spiceypy"
]

[project.urls]
"Homepage" = "https://github.com/coope248/APPA"
"Bug Tracker" = "https://github.com/coope248/APPA/issues"
